featured product section done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- main content -->
    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
     <!-- Header section -->
-     <header class="flex pt-10 nb-20">
+     <header class=" lg:flex flex pt-10 nb-20">
       <!-- text content -->
        <div>
         <h1 class="text-5xl md:text-7xl">
@@ -55,6 +55,42 @@
             </div>
         </div>
      </header>
+     <!-- Featured Products Section -->
+      <section class="py-8 lg:py-24">
+        <!-- title -->
+        <div class="text-center mb-8">
+          <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+          <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+        <!-- Grid Cards -->
+         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
+          <!-- Product Card 1 -->
+          <div class="bg-white rounded-xl shadow-md text-center p-6 w-full max-w-xs mx-auto">
+          <img class="mx-auto mb-4 w-32 h-auto" src="images/tea-1.png" alt="Milk Tea">
+          <h2 class="font-bold text-lg">Milk Tea</h2>
+          <p class="text-gray-600 text-sm">Creamer could be replaced by fresh milk</p>
+          </div>
+            <!-- Product Card 2 -->
+          <div class="bg-white rounded-xl shadow-md text-center p-6 w-full max-w-xs mx-auto">
+            <img class="mx-auto mb-4 w-32 h-auto" src="images/tea-2.png" alt="Milk Tea">
+            <h2 class="font-bold text-lg">Black Tea</h2>
+            <p class="text-gray-600 text-sm">Creamer could be replaced by fresh milk</p>
+          </div>
+          <!-- Product Card 3 -->
+          <div class="bg-white rounded-xl shadow-md text-center p-6 w-full max-w-xs mx-auto">
+            <img class="mx-auto mb-4 w-32 h-auto" src="images/tea-3.png" alt="Milk Tea">
+            <h2 class="font-bold text-lg">Lemon Tea</h2>
+            <p class="text-gray-600 text-sm">Creamer could be replaced by fresh milk</p>
+          </div>
+          <!-- Product Card 4 -->
+          <div class="bg-white rounded-xl shadow-md text-center p-6 w-full max-w-xs mx-auto">
+            <img class="mx-auto mb-4 w-32 h-auto" src="images/tea-4.png" alt="Milk Tea">
+            <h2 class="font-bold text-lg">Green Tea</h2>
+            <p class="text-gray-600 text-sm">Creamer could be replaced by fresh milk</p>
+          </div>
+           </div>
+         </div>
+      </section>
    </main>
 </body>
 </html>
