--- a/index.html
+++ b/index.html
@@ -91,6 +91,48 @@
            </div>
          </div>
       </section>
+
+      <!-- Great Tea Section -->
+       <section class="mb-24">
+        <div class="grid grid-cols-1 lg:grid-cols-2">
+          <!-- Image Section -->
+           <div class="grid grid-cols-2 gap-6 p-6">
+  <!-- Left Column -->
+  <div class="flex flex-col gap-6">
+    <!-- Large Pink Box -->
+    <div class="bg-gradient-to-r from-red-100 to-pink-100 rounded-2xl h-[250px] w-full"></div>
+
+    <!-- Green Tea Image Box -->
+    <div class="bg-green-100 rounded-2xl flex justify-center items-center h-[350px] p-4">
+      <img src="images/fresh-1.png" alt="Green Tea" class="h-[300px]" />
+    </div>
+  </div>
+
+  <!-- Right Column -->
+  <div class="flex flex-col gap-6">
+    <!-- Fixed Orange Tea Box (Bigger now) -->
+    <div class="bg-yellow-50 rounded-2xl flex justify-center items-center h-[350px] p-4">
+      <img src="images/fresh-2.png" alt="Orange Tea" class="h-[300px]" />
+    </div>
+
+    <!-- Large Gray Box -->
+    <div class="bg-gradient-to-r from-gray-300 to-white rounded-2xl h-[250px] w-full"></div>
+  </div>
+</div>
+
+          <!-- Text Section -->
+           <div class="pl-4 md:pl-6 lg:pl-8 pt-12">
+            <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+            <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <br>
+            <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+            <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <br>
+            <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+            <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+           </div>
+        </div>
+       </section>
    </main>
 </body>
 </html>
